// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages:index Snapshots should render all child components and abandon cycle button 1`] = `
"<div class=\\"w-full bg-background\\">
  <div class=\\"min-h-screen max-w-5xl mx-auto flex flex-col px-5 py-8 md:py-10\\">
    <header class=\\"pb-10 flex items-center w-full\\">
      <p class=\\"text-sm\\">
        0 xp
      </p>
      <div class=\\"mx-4 lg:mx-6 flex-1 bg-gray-line h-1 rounded-md\\">
        <div class=\\"relative bg-green h-1\\" style=\\"width: 0%;\\">
          <p class=\\"text-sm absolute -right-4 w-max top-2\\">
            0 xp (0%)
          </p>
        </div>
      </div>
      <p class=\\"text-sm\\">
        64 xp
      </p>
    </header>
    <section class=\\"flex flex-col lg:flex-row flex-1 lg:flex-none lg:mt-16 sm:gap-x-10 md:gap-x-20\\">
      <div class=\\"flex flex-col w-full lg:w-1/2\\">
        <profile-stub></profile-stub>
        <completedchallenges-stub></completedchallenges-stub>
        <countdown-stub></countdown-stub> <button class=\\"button abandon\\">
          Abandon cycle
        </button>
      </div>
      <card-stub id=\\"challenge\\" class=\\"w-full lg:w-1/2\\"></card-stub>
    </section>
  </div>
</div>"
`;

exports[`Pages:index Snapshots should render all child components and start a cycle button 1`] = `
"<div class=\\"w-full bg-background\\">
  <div class=\\"min-h-screen max-w-5xl mx-auto flex flex-col px-5 py-8 md:py-10\\">
    <header class=\\"pb-10 flex items-center w-full\\">
      <p class=\\"text-sm\\">
        0 xp
      </p>
      <div class=\\"mx-4 lg:mx-6 flex-1 bg-gray-line h-1 rounded-md\\">
        <div class=\\"relative bg-green h-1\\" style=\\"width: 0%;\\">
          <p class=\\"text-sm absolute -right-4 w-max top-2\\">
            0 xp (0%)
          </p>
        </div>
      </div>
      <p class=\\"text-sm\\">
        64 xp
      </p>
    </header>
    <section class=\\"flex flex-col lg:flex-row flex-1 lg:flex-none lg:mt-16 sm:gap-x-10 md:gap-x-20\\">
      <div class=\\"flex flex-col w-full lg:w-1/2\\">
        <profile-stub></profile-stub>
        <completedchallenges-stub></completedchallenges-stub>
        <countdown-stub></countdown-stub> <button class=\\"button start\\">
          Start a cycle
        </button>
      </div>
      <card-stub id=\\"challenge\\" class=\\"w-full lg:w-1/2\\"></card-stub>
    </section>
  </div>
</div>"
`;
